--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,2 +1,16 @@
 <div class="menu">
+    <div class="contentArea">
+        <div class="menuItem">
+            <button></button>
+            <label>Info</label>
+        </div>
+        <div class="menuItem">
+            <button></button>
+            <label>Experience</label>
+        </div>
+        <div class="menuItem">
+            <button></button>
+            <label>CV</label>
+        </div>
+    </div>
 </div>
