Basic routing between 2 components I made

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -34,3 +34,13 @@
     width: 20px;
     row-gap: 3px;
 }
+
+.btnVice > a {
+    background-color: gainsboro;
+}
+
+.absoluteContainer {
+    position: relative;
+    top: 100px;
+    right: 50%;
+}
