--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,16 +5,19 @@
       </div>
       <div class="btnVice">
 
-            <button class="button" (click)="1"></button>
+        <button class="button" (click)="1"></button>
 
 
-            <button class="button" (click)="1"></button>
+        <button class="button" (click)="1"></button>
 
 
-            <button class="button" (click)="1"></button> 
+        <a routerLink="/info"></a>
 
       </div>
     </div>
+    <div class="absoluteContainer">
+      <router-outlet></router-outlet>
+    </div>
   </div>
-  <app-menu></app-menu>
+
 </div>
