--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -1,5 +1,6 @@
 .menu {
-    background-color: #1e71b5;
+    background-color: rgb(30, 113, 181);
+    background-color: rgba(30, 113, 181, 0.9);
     border-style: solid;
     border-color: gainsboro;
     border-width: 1px;
@@ -14,6 +15,16 @@
     display: grid;
     grid-row: 2 / 3;
     grid-auto-flow: column;
+}
+
+.toolbarArea {
+    grid-row: 1 / 3;
+}
+
+.toolbarArea > a {
+    color: white;
+    right: 2%;
+    position: absolute;
 }
 
 .menuItem  {
