--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,4 +1,7 @@
 <div class="menu">
+    <div class="toolbarArea">
+        <a routerLink="/">x</a>
+    </div>
     <div class="contentArea">
         <div class="menuItem">
             <button></button>
