--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -12,7 +12,7 @@
             <label>Experience</label>
         </div>
         <div class="menuItem">
-            <button></button>
+            <a [routerLink]="['/', { outlets: {popup: ['info'] } } ]"></a>
             <label>CV</label>
         </div>
     </div>
