--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,11 +1,20 @@
+.galcontainer {
+    height: 100vh;
+    position: relative;
+}
+
 .galvice {  
     width: 600px;
     height: 300px;
     background-color: brown;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     display: grid;
     border-radius: 1rem;
-    /* grid-template-columns: repeat(20, 1fr);
-    grid-template-rows: repeat(10, 1fr); */
+    grid-template-columns: repeat(20, 1fr);
+    grid-template-rows: repeat(10, 1fr);
     grid-template-areas:
     " . . . . . . . . . . . . . . . . . . . . "
     " . . . . . . . . . . . . . . . . . . . . "
@@ -24,8 +33,11 @@
 .screen {
     background-color: #bee0a1;
     font-family: consolas;
-    background-image:url(images/gridvice.png);
+    background-image:url(assets/images/gridvice.png);
     grid-area: s;
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-rows: 1fr 2fr 1fr;
 }
 
 .btnVice {
@@ -40,7 +52,14 @@
 }
 
 .absoluteContainer {
-    position: relative;
-    top: 100px;
-    right: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.screen > img {
+    image-rendering: pixelated;
+    height: 96px;
+    grid-area: 2 / 2 / 3 / 3;
 }
