Made some changes to the color and made a barebones "info" window! happy with what i did today

--- a/src/app/galstyles.css
+++ b/src/app/galstyles.css
@@ -1,3 +1,14 @@
-h1 {
-    font-family: 'Consolas'
+h1, p {
+    font-family: 'Consolas';
+    color: gainsboro;
+}
+
+.modalVice {
+    background-color: rgb(18, 56, 123);
+    background-color: rgba(18, 56, 123, 0.9);
+    border-style: solid;
+    border-color: gainsboro;
+    border-width: 1px;
+    border-radius: 0.5rem;
+    color: gainsboro;
 }
