--- a/src/app/menu/info/info.component.html
+++ b/src/app/menu/info/info.component.html
@@ -1,3 +1,13 @@
-<div class="modalVice">
-  <h1> Test </h1>
+<div class="containerInfo">
+  <div class="modalVice modalInfo">
+    <h1> Test </h1>
+    <br> <br> <br>
+    <p>Development Analyst <br> Test Number <br> email@test.com <br> Linkedin Test
+    </p>
+  </div>
+  <div class="tab">
+    <div class="modalVice">ABOUT</div>
+    <div class="modalVice">SKILLS</div>
+    <div class="modalVice">CONTACT</div>
+  </div>
 </div>
