other color changes styled some links and added a little welcome message

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="galcontainer">
   <div class="galvice">
     <div class="screen">
+      <div class="textContainer">{{actualMessage}}</div>
 
       <img src="assets/images/at.gif" alt="">
     </div>
