--- a/src/app/menu/info/info.component.html
+++ b/src/app/menu/info/info.component.html
@@ -6,8 +6,8 @@
     </p>
   </div>
   <div class="tab">
-    <div class="modalVice">ABOUT</div>
-    <div class="modalVice">SKILLS</div>
-    <div class="modalVice">CONTACT</div>
+    <div class="modalVice"> <a href=""> ABOUT</a></div>
+    <div class="modalVice"><a href="">SKILLS</a></div>
+    <div class="modalVice"><a href="">CONTACT</a></div>
   </div>
 </div>
