--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,7 +6,7 @@
 .galvice {  
     width: 600px;
     height: 300px;
-    background-color: brown;
+    background-color: #953737;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -38,6 +38,7 @@
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
     grid-template-rows: 1fr 2fr 1fr;
+    position: relative;
 }
 
 .btnVice {
@@ -62,4 +63,13 @@
     image-rendering: pixelated;
     height: 96px;
     grid-area: 2 / 2 / 3 / 3;
+}
+
+.textContainer {
+    grid-area: 1 / 4 / 2 / 1;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-transform: uppercase;
 }
