--- a/src/app/menu/info/info-tab/info-tab.component.html
+++ b/src/app/menu/info/info-tab/info-tab.component.html
@@ -1,5 +1,5 @@
-
-<div class="modalVice">
-    <h4> Technical Profficency          </h4>
-    <app-skill-item></app-skill-item>
+<div class="modalVice skillView">
+    <div *ngFor="let skill of skills">
+        <app-skill-item [skill]="skill"></app-skill-item>
+    </div>
 </div>
