improvements to the little skills tab, still some things to fix

--- a/src/app/menu/info/info-tab/info-tab.component.css
+++ b/src/app/menu/info/info-tab/info-tab.component.css
@@ -1,3 +1,13 @@
 .skillView {
     display: grid;
+    grid-template-columns: 1fr 1fr 1fr ;
+}
+
+.skillGroup {
+    grid-column: 1 / 4; 
+    text-align: left;
+}
+
+app-skill-item {
+    padding: 10px;
 }
