--- a/src/app/menu/info/info.component.html
+++ b/src/app/menu/info/info.component.html
@@ -1,17 +1,20 @@
-<div class="containerInfo">
-  <div class="modalVice modalInfo">
-    <h1> Test </h1>
-    <br> <br> <br>
-    <p>Development Analyst <br> Test Number <br> email@test.com <br> Linkedin Test
-    </p>
+<div class="resizable-grid">
+  <div class="containerInfo">
+    <div class="modalVice modalInfo">
+      <h1> Test </h1>
+      <br> <br> <br>
+      <p>Development Analyst <br> Test Number <br> email@test.com <br> Linkedin Test
+      </p>
+    </div>
+    <div class="tab">
+      <div class="modalVice"><a (click)="expand(tab.ABOUT)">ABOUT</a></div>
+      <div class="modalVice"><a (click)="expand(tab.SKILLS)">SKILLS</a></div>
+      <div class="modalVice"><a (click)="expand(tab.CONTACT)">CONTACT</a></div>
+    </div>
   </div>
-  <div class="tab">
-    <div class="modalVice"><a (click)="expand(tab.ABOUT)">ABOUT</a></div>
-    <div class="modalVice"><a (click)="expand(tab.SKILLS)">SKILLS</a></div>
-    <div class="modalVice"><a (click)="expand(tab.CONTACT)">CONTACT</a></div>
+  <div class="expanded-tab-grid">
+    <app-skills-tab *ngIf="tabToExpand==tab.SKILLS"></app-skills-tab>
+    <app-about-tab *ngIf="tabToExpand==tab.ABOUT"></app-about-tab>
+    <app-contact-tab *ngIf="tabToExpand==tab.CONTACT"></app-contact-tab>
   </div>
-
-  <app-skills-tab *ngIf="tabToExpand==tab.SKILLS"></app-skills-tab>
-  <app-about-tab *ngIf="tabToExpand==tab.ABOUT"></app-about-tab>
-  <app-contact-tab *ngIf="tabToExpand==tab.CONTACT"></app-contact-tab>
 </div>
