--- a/src/app/menu/info/skills-tab/skill-item/skill-item.component.html
+++ b/src/app/menu/info/skills-tab/skill-item/skill-item.component.html
@@ -4,7 +4,7 @@
   </p>
   <div class="skillBar">
     <div class="skillLevel" *ngFor="let hasLevel of hasLevels;">
-      <ng-container *ngIf="skill.measureable">
+      <ng-container *ngIf="skill.measurable">
         <ng-template [ngIf]="hasLevel==true" [ngIfElse]="doesntHaveLevel">
           <div class="hasLevel"></div>
         </ng-template>
