--- a/src/app/menu/info/info.component.css
+++ b/src/app/menu/info/info.component.css
@@ -10,13 +10,17 @@
 
 .containerInfo {
     display: grid;
-    grid-template-columns: 8fr 1fr;
+    grid-template-columns: 8fr;
 }
 
 .expanded-tab-grid {
-    width: 32em;
+    display: grid;
+    grid-template-columns: 32em 1fr;
 }
 
+.tab-content {
+    border-radius: 0em 0 0.5em 0.5em;
+}
 
 .modalInfo {
     padding: 1em 1em 1em 0.5em;
@@ -27,6 +31,7 @@
     text-orientation: sideways;
     writing-mode: vertical-rl;
     border-left: 0px;
+    height: 20em;
     
     font-family: consolas;
     display: grid;
@@ -43,9 +48,13 @@
     text-align: end;
 }
 
+.inactive-tab {
+    background-color: rgb(0, 30, 97);
+    background-color: rgba(0, 30, 97, 0.9);
+}
+
 app-info-tab {
     grid-column: 2 / 4;
     grid-row: 1 / 2;
     z-index: 1;
-    
 }
