--- a/src/app/menu/info/skills-tab/skills-tab.component.html
+++ b/src/app/menu/info/skills-tab/skills-tab.component.html
@@ -1,3 +1,3 @@
-<div class="modalVice skillView">
+<div class="skillView">
     <app-skill-item *ngFor="let skill of skills" [skill]="skill" [ngClass]="{'skillGroup' : skill.group}"></app-skill-item>
 </div>
