--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,6 +1,6 @@
 <div class="menu modalVice">
     <div class="toolbarArea">
-        <a routerLink="/">x</a>
+        <a routerLink="../">x</a>
     </div>
     <div class="contentArea">
         <div class="menuItem">
