--- a/src/app/menu/info/info.component.css
+++ b/src/app/menu/info/info.component.css
@@ -20,6 +20,7 @@
 
 .tab-content {
     border-radius: 0em 0 0.5em 0.5em;
+    position: relative;
 }
 
 .modalInfo {
@@ -46,6 +47,7 @@
     border-radius: 0px 20px 0px 0px;
     padding-bottom: 5px;
     text-align: end;
+    cursor: pointer;
 }
 
 .inactive-tab {
