--- a/src/app/menu/info/info.component.html
+++ b/src/app/menu/info/info.component.html
@@ -1,6 +1,7 @@
 <div class="resizable-grid">
   <div class="containerInfo">
     <div class="modalVice modalInfo">
+        
       <h1> Test </h1>
       <br> <br> <br>
       <p>Development Analyst <br> Test Number <br> email@test.com <br> Linkedin Test
@@ -8,7 +9,11 @@
     </div>
   </div>
   <div class="expanded-tab-grid">
-    <div class="modalVice tab-content"><app-skills-tab *ngIf="tabToExpand==tab.SKILLS"></app-skills-tab>
+    <div class="modalVice tab-content">
+        <div class="toolbarArea">
+            <a (click)="routeToParent()">x</a>
+        </div>
+      <app-skills-tab *ngIf="tabToExpand==tab.SKILLS"></app-skills-tab>
     <app-about-tab *ngIf="tabToExpand==tab.ABOUT"></app-about-tab>
     <app-contact-tab *ngIf="tabToExpand==tab.CONTACT"></app-contact-tab></div>
     <div class="tab">
