Changed the way you obtain personal info so it uses a backend.

--- a/src/app/menu/info/info.component.html
+++ b/src/app/menu/info/info.component.html
@@ -1,9 +1,9 @@
 <div class="resizable-grid">
   <div class="containerInfo">
     <div class="modalVice modalInfo">
-      <h1> Test </h1>
+      <h1> {{me.name}} </h1>
       <br> <br> <br>
-      <p>Development Analyst <br> Test Number <br> email@test.com <br> Linkedin Test
+      <p>Development Analyst <br> {{me.number}} <br> {{me.email}} <br> Linkedin Test
       </p>
     </div>
   </div>
