Transfered the about text to the backend

--- a/src/app/menu/info/about-tab/about-tab.component.html
+++ b/src/app/menu/info/about-tab/about-tab.component.html
@@ -1,12 +1,6 @@
 
   <h1>About</h1>
-
-  <p>I'm Mateo Delgado! 24 years old, and I am a software developer currently located in Medellin, Colombia, and I've
-    made this page as a personal project which I use as a small, non-serious showcase of my knowledge, as an
-    interactive resume and as a playground
-    for me to test new ideas</p>
-
-  <p>I consider myself a creative and a curious person, fast to adapt, a little too obsessed with being efficient and
-    more than anything, someone that loves having fun with what I get into </p>
-
-  <p>If you're interested in working with me, please feel free to contact me and I will answer as soon as i can </p>
+  <div id="description">
+    {{me.description}}
+  </div>
+  
