Created the basic model for experience and a placeholder modal

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -10,7 +10,7 @@
             <label>Info</label>
         </div>
         <div class="menuItem">
-                <a [routerLink]="['/', { outlets: {popup: ['info'] } } ]">
+                <a [routerLink]="['/', { outlets: {popup: ['experience'] } } ]">
                     <img src="assets/images/experience.gif" alt="">
                 </a>
             <label>Experience</label>
