--- a/src/app/menu/experience/experience.component.css
+++ b/src/app/menu/experience/experience.component.css
@@ -1,9 +1,34 @@
 .resizable-grid {
     position: absolute;
     top: 50%;
-    left: 25%;
-    transform: translateY(-50%);
+    left: 50%;
+    transform: translate(-50%, -50%);
     display: grid;
-    grid-template-columns: 15em 1fr;
-    grid-template-rows: 18em 1fr;
+    grid-template-columns: 1fr;
+    padding: 1em;
+    grid-gap: 0.5em;
 }
+
+.experience-item {
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+    grid-template-rows: 1fr 3fr;
+    
+}
+
+.experience-item > img {
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+    padding: 0 0.5em 0 0.5em;
+} 
+
+ .experience-item > h6 {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+
+} 
+
+.experience-item > p {
+    grid-column: 2 / 3;
+
+} 
