--- a/src/app/menu/experience/experience.component.html
+++ b/src/app/menu/experience/experience.component.html
@@ -1,5 +1,8 @@
-<div class="resizable-grid">
-  <div class="modalVice">
-    test
+<div class="resizable-grid modalVice">
+  <h1>Experience</h1>
+  <div class="experience-item" *ngFor="let experience of experiences">
+    <img src="{{experience.icon}}" alt="">
+    <h6>{{experience.title}}</h6>
+    <p>{{experience.description}}</p>
   </div>
-</div>
+</div>
