--- a/src/app/menu/info/about-tab/about-tab.component.html
+++ b/src/app/menu/info/about-tab/about-tab.component.html
@@ -1,6 +1,6 @@
 
   <h1>About</h1>
-  <div id="description">
+  <div id="description" class="content-padding">
     {{me.description}}
   </div>
   
