--- a/src/app/menu/info/contact-tab/contact-tab.component.html
+++ b/src/app/menu/info/contact-tab/contact-tab.component.html
@@ -1,6 +1,6 @@
   <h1>Contact</h1>
   <form [formGroup]="form" (ngSubmit)="onSubmit()">
-    <div class="contact-container">
+    <div class="contact-container content-padding">
       <div class="contactPair">
         <label for="name">Name</label>
         <input formControlName="name" id="name" type="text">
