--- a/src/app/menu/experience/experience.component.css
+++ b/src/app/menu/experience/experience.component.css
@@ -1,11 +1,6 @@
-.resizable-grid {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+.experience-grid {
     display: grid;
     grid-template-columns: 1fr;
-    padding: 1em;
     grid-gap: 0.5em;
 }
 
@@ -13,7 +8,6 @@
     display: grid;
     grid-template-columns: 1fr 5fr;
     grid-template-rows: 1fr 3fr;
-    
 }
 
 .experience-item > img {
