--- a/src/app/menu/experience/experience.component.html
+++ b/src/app/menu/experience/experience.component.html
@@ -1,4 +1,5 @@
-<div class="resizable-grid modalVice">
+<div class="experience-grid center-screen basic-modal">
+  <app-close-popup> </app-close-popup>
   <h1>Experience</h1>
   <div class="experience-item" *ngFor="let experience of experiences">
     <img src="{{experience.icon}}" alt="">
