--- a/src/app/menu/experience/experience.component.html
+++ b/src/app/menu/experience/experience.component.html
@@ -1,6 +1,5 @@
 <div class="experience-grid center-screen basic-modal">
-  <app-close-popup> </app-close-popup>
-  <h1>Experience</h1>
+  <app-title-modal [title]="this"> </app-title-modal>
   <div class="experience-item" *ngFor="let experience of experiences">
     <img src="{{experience.icon}}" alt="">
     <h6>{{experience.title}}</h6>
