--- a/src/app/menu/experience/experience.component.css
+++ b/src/app/menu/experience/experience.component.css
@@ -8,6 +8,7 @@
     display: grid;
     grid-template-columns: 1fr 5fr;
     grid-template-rows: 1fr 3fr;
+    padding: 1em;
 }
 
 .experience-item > img {
