--- a/src/app/menu/info/info.component.css
+++ b/src/app/menu/info/info.component.css
@@ -1,17 +1,14 @@
 .resizable-grid {
     display: grid;
-    grid-template-columns: 15em 1fr;
-    grid-template-rows: 18em 1fr;
-}
-
-.containerInfo {
-    display: grid;
-    grid-template-columns: 8fr;
+    grid-template-columns: 10fr 20fr;
+    grid-template-rows: 30fr 10fr;
 }
 
 .expanded-tab-grid {
     display: grid;
-    grid-template-columns: 32em 1fr;
+    grid-template-columns: 32fr 1fr;
+    grid-row: 1 / 3;
+    grid-column: 2 / 3;
 }
 
 .tab-content {
