--- a/src/app/menu/info/info.component.html
+++ b/src/app/menu/info/info.component.html
@@ -1,6 +1,5 @@
-<div class="resizable-grid center-screen">
-  <div class="containerInfo">
-    <div class="basic-modal modalInfo">
+<div class="info-grid center-screen">
+    <div class="basic-modal modal-info">
       <h1> {{me.name}} </h1>
       <br>
       <br>
@@ -14,7 +13,6 @@
             {{socialSite.icon}} {{socialSite.user}} 
         </div>
     </div>
-  </div>
   <div class="expanded-tab-grid">
     <div class="basic-modal tab-content">
       <app-title-modal [title]="this"> </app-title-modal>
