--- a/src/app/menu/info/info.component.css
+++ b/src/app/menu/info/info.component.css
@@ -1,11 +1,13 @@
-.resizable-grid {
+.info-grid {
     display: grid;
-    grid-template-columns: 10fr 20fr;
-    grid-template-rows: 30fr 10fr;
+    grid-template-columns: 2fr 4fr;
+    grid-template-rows: 3fr 1fr;
 }
 
 .expanded-tab-grid {
     display: grid;
+    width: 37em;
+    height: 37em;
     grid-template-columns: 32fr 1fr;
     grid-row: 1 / 3;
     grid-column: 2 / 3;
@@ -16,7 +18,7 @@
     position: relative;
 }
 
-.modalInfo {
+.modal-info {
     padding: 1em 1em 1em 0.5em;
     border-radius: 0.5em 0 0 0.5em;
 }
