--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,87 +1,18 @@
 .galcontainer {
     height: 100vh;
     position: relative;
-}
-
-.galvice {  
-    /* width: 600px; */
-    /* height: 300px; */
-    background-color: #3593aa;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     display: grid;
-    /* border-radius: 45% / 60% 60% 35% 35%; */
-    border-radius: 5%;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(14, 1fr);
-    grid-template-areas:
-    " . . . . . . . . . . . . "
-    " . . . . . . . . . . . . "
-    " . . s s s s s s s s . . "
-    " . . s s s s s s s s . . "
-    " . . s s s s s s s s . . "
-    " . . s s s s s s s s . . "
-    " . . s s s s s s s s . . "
-    " . . s s s s s s s s . . "
-    " . . s s s s s s s s . . "
-    " . . s s s s s s s s . . "
-    " . . . . . . . . . . . . "
-    " . . . b b b b b b . . . "
-    " . . . . . . . . . . . . "
-    " . . . . . . . . . . . . "
-    ;
-
-    
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
 }
 
-.screen {
-    background-color: #ceda93;
-    font-family: consolas;
-    background-image:url(assets/images/gridvice.png);
-    grid-area: s;
-    display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
-    grid-template-rows: 1fr 2fr 1fr; 
-    position: relative;
-    border: 2px solid #6f7a37;
-}
-
-.btnVice {
-    grid-area: b;
-    display: grid;
-    row-gap: 3px;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-}
-
-.btnVice > a {
-    background-color: white;
-    border-color: black;
-    border-width: 3px;
-    border-style: solid;
+app-intro {
     grid-column: 1 / 2;
-    border-radius: 50% 50% 50% 50%;
+    padding: 3em;
+
 }
 
-.absoluteContainer {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.screen > img {
-    image-rendering: pixelated;
-    height: 96px;
-    grid-area: 2 / 2 / 3 / 3;
-}
-
-.textContainer {
-    grid-area: 1 / 4 / 2 / 1;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-transform: uppercase;
+app-device {
+    grid-column: 2 / 3;
+    padding: 3em;
 }
