worked on the cursor change, reordered components so it would make more sense

--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -2,7 +2,7 @@
 <div class="vertical-center">
   <div class="center-screen">
   <p>
-    Hi, I'm Mateo Delgado! Software Developer, actually residing in Medellin, Colombia, and with 3 years of experience on
+    Hi, I'm Mateo Delgado! a software engineer, actually residing in Medellin, Colombia, and with 3 years of experience on
     Web development, currently open for work.
   </p>
   <p>
