--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -8,7 +8,7 @@
             <label>Info</label>
         </div>
         <div class="menuItem">
-            <a [routerLink]="['/', { outlets: {popup: ['experience'] } } ]">
+            <a [routerLink]="['/', { outlets: {popup: ['extrainfo'] } } ]">
                 <img src="assets/images/experience.gif" alt="">
             </a>
             <label>Experience</label>
