--- a/src/app/device/device.component.css
+++ b/src/app/device/device.component.css
@@ -40,6 +40,10 @@
     border: 2px solid #6f7a37;
 }
 
+.screen:hover {
+    cursor: pointer;
+}
+
 .btnVice {
     grid-area: b;
     display: grid;
