--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -5,13 +5,13 @@
             <a [routerLink]="['/', { outlets: {popup: ['info'] } } ]">
                 <img src="assets/images/about.gif" alt="">
             </a>
-            <label>Info</label>
+            <label>Profile</label>
         </div>
         <div class="menuItem">
             <a [routerLink]="['/', { outlets: {popup: ['extrainfo'] } } ]">
                 <img src="assets/images/experience.gif" alt="">
             </a>
-            <label>Experience</label>
+            <label>Other sites</label>
         </div>
         <div class="menuItem">
             <a download href="assets/MateoDelgadoCV.pdf">
