--- a/src/app/menu/info/skills-tab/skill-item/skill-item.component.css
+++ b/src/app/menu/info/skills-tab/skill-item/skill-item.component.css
@@ -25,8 +25,10 @@ div {
 
 .hasLevel {
     image-rendering: pixelated;
+    width: 100%
 }
 
 .hasNoLevel{
     image-rendering: pixelated;
+    width: 100%
 }
